--- a/sh4asm-ts/package.json
+++ b/sh4asm-ts/package.json
@@ -12,10 +12,65 @@
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
+    "capbilities": {
+      "hovesrProvider": true
+    },
     "commands": [
       {
-        "command": "sh4asm-ts.helloWorld",
+        "command": "sh4asm.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "sh4asm.box",
+        "title": "Box Selection"
+      }
+    ],
+    "snippets": [
+      {
+        "language": "sh4asm",
+        "path": "./snippets/snippets.code-snippets"
+      }
+    ],
+    "languages": [
+      {
+        "id": "sh4asm",
+        "aliases": [
+          "SH4-ASM",
+          "asm",
+          "sh4asm"
+        ],
+        "extensions": [
+          ".asm",
+          ".sh4asm",
+          ".sh4"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "sh4asm",
+        "scopeName": "source.sh4asm",
+        "path": "./syntaxes/sh4asm.tmLanguage.json"
+      }
+    ],
+    "themes": [
+      {
+        "id": "SH4ASM vsDark+",
+        "label": "SH4 vsDark+",
+        "uiTheme": "vs-dark",
+        "path": "./themes/sh4asm_darkPlus-themeExt-darkVS.json"
+      },
+      {
+        "id": "SH4ASM vsDark",
+        "label": "SH4 vsDark",
+        "uiTheme": "vs-dark",
+        "path": "./themes/sh4asm_darkVs-themeBase.json"
+      },
+      {
+        "label": ".sh4asm",
+        "uiTheme": "vs-dark",
+        "path": "./themes/sh4asm-color-theme.json"
       }
     ]
   },
@@ -28,19 +83,14 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/vscode": "^1.79.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "20.2.5",
-    "@types/vscode": "^1.79.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "@vscode/test-electron": "^2.3.2",
     "eslint": "^8.41.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^5.1.3"
-  },
-  "dependencies": {
-    "npm": "^9.8.0"
+    "typescript": "^5.1.3",
+    "@vscode/test-electron": "^2.3.2"
   }
 }
