--- a/sh4asm-ts/package.json
+++ b/sh4asm-ts/package.json
@@ -2,7 +2,13 @@
   "name": "sh4asm-ts",
   "displayName": "sh4asm-ts",
   "description": "sh4 helper",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "publisher": "Magnetro & TVIndustries",
+  "license": "None",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/magnetro1/sh4asm.git"
+  },
   "engines": {
     "vscode": "^1.79.0"
   },
@@ -83,14 +89,17 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.79.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "20.2.5",
+    "@types/vscode": "^1.79.0",
+    "@vscode/test-electron": "^2.3.2",
     "eslint": "^8.41.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^5.1.3",
-    "@vscode/test-electron": "^2.3.2"
+    "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "vsce": "^2.15.0"
   }
 }
