--- a/sh4asm-ts/.vscodeignore
+++ b/sh4asm-ts/.vscodeignore
@@ -1,16 +1,2 @@
-out/test/**
-.gitignore
-.yarnrc
-vsc-extension-quickstart.md
-node_modules/*
-
-.vscode/**
-.vscode-test/**
-src/**
-.gitignore
-.yarnrc
-vsc-extension-quickstart.md
-**/tsconfig.json
-**/.eslintrc.json
-**/*.map
-**/*.ts
+node_modules/
+node_modules
