--- a/sh4asm-ts/package.json
+++ b/sh4asm-ts/package.json
@@ -70,8 +70,8 @@
     ],
     "themes": [
       {
-        "id": "SH4ASM vsDark+",
-        "label": "SH4 vsDark+",
+        "id": "Dark+",
+        "label": "Dark+",
         "uiTheme": "vs-dark",
         "path": "./themes/sh4asm_darkPlus-themeExt-darkVS.json"
       },
