--- a/sh4asm-ts/package.json
+++ b/sh4asm-ts/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sh4asm-ts",
-  "displayName": "sh4asm-ts",
+  "displayName": "sh4asm extension",
   "description": "sh4 helper",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "publisher": "Magnetro & TVIndustries",
   "license": "MIT",
   "repository": {
@@ -29,9 +29,10 @@
       }
     ],
     "snippets": [
+
       {
         "language": "sh4asm",
-        "path": "./snippets/snippets.code-snippets"
+        "path": "./snippets/mvc2_snippets_general.code-snippets"
       },
       {
         "language": "sh4asm",
